--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -18,6 +18,7 @@
         display: none;
     }
     .navbar .menu-bar {
+        grid-column: 2;
         display: inline;
         display: flex;
         flex-direction: column;
@@ -31,6 +32,7 @@
         display: none;
     }
 
+   
     .princesa {
         height: auto;
         background-color: black;
@@ -49,7 +51,7 @@
 
 }
 
-@media screen and (min-width:576px) and (max-width:767px) {
+    @media screen and (min-width:576px) and (max-width:767px) {
     .navbar {
         height: 65px;
         background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/imagenes/logo-nav.jpg);
@@ -168,5 +170,4 @@
     }
 
 }
-
 
