--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body {
 
 .navbar {
     height: 65px;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/imagenes/logo-nav.jpg);
+    background-color: rgb(0, 0, 0);
     background-position: center;
     background-repeat:no-repeat;
     background-size: cover;
